RESOLVED FIXED44549
crash when rendering scrollbar gradient
https://bugs.webkit.org/show_bug.cgi?id=44549
Summary crash when rendering scrollbar gradient
Tony Chang
Reported 2010-08-24 13:53:17 PDT
crash when rendering scrollbar gradient
Attachments
Patch (3.42 KB, patch)
2010-08-24 13:55 PDT, Tony Chang
no flags
test case (781 bytes, text/html)
2010-08-24 13:55 PDT, Tony Chang
no flags
Tony Chang
Comment 1 2010-08-24 13:55:17 PDT
Tony Chang
Comment 2 2010-08-24 13:55:56 PDT
Created attachment 65317 [details] test case
Tony Chang
Comment 3 2010-08-24 13:58:40 PDT
Hyatt, can you review this? The test case crashes Chrome and Safari Win. It doesn't crash on Safari Mac, I think because on Safari Mac, the main scrollbars can't be styled.
Dave Hyatt
Comment 4 2010-08-26 11:11:59 PDT
Comment on attachment 65316 [details] Patch r=me
WebKit Commit Bot
Comment 5 2010-08-26 12:39:24 PDT
Comment on attachment 65316 [details] Patch Rejecting patch 65316 from commit-queue. Failed to run "[u'git', u'svn', u'dcommit']" exit_code: 1 Last 500 characters of output: Core/ChangeLog M WebCore/css/CSSImageGeneratorValue.cpp A repository hook failed: MERGE request failed on '/repository/webkit/trunk': Commit blocked by pre-commit hook (exit code 1) with output: The following files contain tab characters: trunk/LayoutTests/scrollbars/scrollbar-gradient-crash.html Please use spaces instead to indent. If you must commit a file with tabs, use svn propset to set the "allow-tabs" property. at /usr/local/git/libexec/git-core/git-svn line 572 Full output: http://queues.webkit.org/results/3732627
Tony Chang
Comment 6 2010-08-26 14:31:50 PDT
Note You need to log in before you can comment on or make changes to this bug.