2010-08-26  Tony Chang  <tony@chromium.org>

Reviewed by David Hyatt.

        crash when rendering scrollbar gradient
        https://bugs.webkit.org/show_bug.cgi?id=44549

        * scrollbars/scrollbar-gradient-crash-expected.txt: Added.
        * scrollbars/scrollbar-gradient-crash.html: Added.
2010-08-26  Tony Chang  <tony@chromium.org>

        Reviewed by David Hyatt.

        crash when rendering scrollbar gradient
        https://bugs.webkit.org/show_bug.cgi?id=44549

        Test: scrollbars/scrollbar-gradient-crash.html

        * css/CSSImageGeneratorValue.cpp:
        (WebCore::CSSImageGeneratorValue::getImage): Keep this alive.

Canonical link: https://commits.webkit.org/56905@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66133 268f45cc-cd09-0410-ab3c-d52691b4dbfc